# GraphSLAM

./: README.md
doc/Documentation/: Doxyfile  README.md
doc/Memoria/: .gitignore  bibliografia.bib  cap1.tex  cap2.tex  cap3.tex  cap4.tex  conclu.tex  memoria.tex  packages.tex  umemoria.cls
doc/Memoria/imagenes/: kernelsPlot.py  maxDistance.py  maxVariace.py
doc/Memoria/template/: umemoria.cls
doc/Memoria/tikz/: graph.pgf  graphslam.pgf  incremental1.pgf  incremental2.pgf  incremental3.pgf  matrix2.pgf  matrix3.pgf  protocol-example.pgf  protocol.pgf  template.tex  template.tex~
doc/Presentation/: .gitignore  main.tex
doc/Presentation/dot/: mobile.dot
doc/Presentation/tikz/: correspondence1.pgf  correspondence2.pgf  final-algorithm1.pgf  final-algorithm2.pgf  final-algorithm3.pgf  graphslam01.pgf  graphslam02.pgf  graphslam03.pgf  graphslam04.pgf  graphslam05.pgf  graphslam06.pgf  graphslam07.pgf  graphslam08.pgf  graphslam09.pgf  landmark.pgf  likelihood1.pgf  likelihood2.pgf  log-likelihood1.pgf  log-likelihood2.pgf  matrix01.pgf  matrix03.pgf  matrix04.pgf  matrix05.pgf  matrix06.pgf  matrix07.pgf  matrix08.pgf  matrix09.pgf  matrix10.pgf  measurements.pgf  motion.pgf  odometry.pgf  protocol1.pgf  protocol2.pgf  protocol3.pgf  template.tex
src/: .gitignore
src/graphSLAM/: .gitignore  CMakeLists.txt  README.md
src/graphSLAM/my-simulator/: test_simulator2d_noise.cpp
src/graphSLAM/my-slam/: data_association.cpp  data_association.h  my_slam.cpp  slam_functs.cpp  slam_functs.h
src/python-helpers/: README.md
src/python-helpers/commons/: g2o2lab.py  slamData.py  slamFunctions.py
src/python-helpers/v1-known-correspondence/: my-slam.py  removeFilesInFolders.sh
src/python-helpers/v2-unknown-correspondence/: my-slam.py
src/python-helpers/v3-real-data/: my-slam.py  removeFilesInFolders.sh
src/python-helpers/v3-real-data/data/: .gitignore
src/python-helpers/v3-real-data/data/Parque OHiggins/: OHigginsRaw2g2o.py  OHigginsgt2g2o.py  ground_truth_map.txt  gt.g2o
src/python-helpers/v3-real-data/data/ROS/: ROSRaw2g2o.py  ROSgt2g2o.py  ground_truth_sim_art.yaml  gt.g2o
src/python-helpers/v3-real-data/data/Victoria Park/: .gitignore  plotVictoria.py  victoriaRaw2g2o.py
